# c2-translation-validation

./: .gitignore  C2Validator.lean  LICENSE  Main.lean  README.md  Test.lean  lake-manifest.json  lakefile.lean  lakefile.toml
Analysis/: .gitignore  analysis.ipynb  pyproject.toml
C2Validator/: Basic.lean  Compile.lean  SoN.lean  SoNGraph.lean  VC.lean  ValError.lean  Verify.lean  XMLParser.lean  Z3.lean
C2Validator/Fuzzer/: Basic.lean  Fuzzer.lean
C2Validator/SoN/: Basic.lean  Build.lean  Float.lean  Loop.lean  RawParser.lean  XMLParser.lean
Java/: Fib.java  ID.java
Resources/: fib.xml
Test/Resources/: AndNeg.java  Arithmetic.java  Call.java  Floating.java  ID.java  LShift.java  Loop.java  Memory.java  MulAsso.java  MulFloat.java  Test.java  TestArithmetic.xml
Theories/: BVDistributive.smt2  FloatAddZero.smt2  FloatCommutative.smt2  FloatDivFour.smt2  FloatDivOne.smt2  FloatMulOne.smt2  FloatMulTwo.smt2  FloatNaN.smt2  MulRing.smt2
