[project]
name = "analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Wu Tianxing",email = "tianxing@kth.se"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "analysis", from = "src"}]


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
